# Economy

./: .gitignore  README.txt  requirement.txt  setup.cfg
JSON/: us_gaap_bs.json  us_gaap_depr.json  us_gaap_is.json
database/: statements.db
env_files/: requirement.txt
input/: TEST_K_exp.csv  TSN_Q_exp.csv  TSN_Q_exp_test.csv  new_company_sec_reports.csv
notebooks/: 00_us-gaap_SEC_download.ipynb  01_write_new_data_into_sql.ipynb  02_pernod_richard_national.ipynb  DCF_modeling.ipynb  DCF_modeling_TSN.ipynb  SEC_API_functions.ipynb  SQL_create_schema.ipynb  Stock_QC_notebook.ipynb  TSN_value_notebook.ipynb  Value_ratios.ipynb  a_us-gaap_SEC_download.ipynb  adm_national.ipynb  albemarle_national.ipynb  arkema_national.ipynb  aurubis_national.ipynb  austevoll_national.ipynb  b2gold_national.ipynb  b_write_new_data_into_sql.ipynb  bavarian_nordic.ipynb  bayer_national.ipynb  billerud_national.ipynb  boliden_national.ipynb  bonheur_national.ipynb  borgwarner_national.ipynb  c_Stock_visual_QC.ipynb  canadian_tire_co_national.ipynb  canfor_national.ipynb  celanese_national.ipynb  d_calculate_value_ratios.ipynb  dno_national.ipynb  dollartree_national.ipynb  duni_national.ipynb  e_dcf_modeling.ipynb  emera_national.ipynb  estee_lauder_national.ipynb  eversource_energie_national.ipynb  first_majestic_silver_national.ipynb  fortis_national.ipynb  fortum_national.ipynb  grieg_national.ipynb  (+33 more)
runner/: 00_runner_monotonous_stocks.ipynb  00_runner_value_stocks.ipynb  01_runner_norway.ipynb  runner.ipynb  runner_followed_companies.ipynb  runner_norway.ipynb
(+245 files in other folders)
