[metadata]
name = valueinvesting
version = 1.0
author = Zsolt Nagy
author_email = zs.nagy.1989@gmail.com
description = README.
long_description = file: README.md
long_description_content_type = text/markdown
url = -
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = valueinvesting